# codefetch

./: .gitignore  CMakeLists.txt  README.md  build.ninja  codefetch.cpp  file_utils.cpp  file_utils.hpp  language_stats.cpp  language_stats.hpp  meson.build
modules/: Language_stats_module.cppm  License_module.cppm  Metabuild_system_module.cppm  Statistics_module.cppm  file_extension_to_language_map.cpp  file_extension_to_language_map.hpp  git_module.cpp  git_module.hpp  git_statistics.cpp  git_statistics.hpp  language_stats.cpp  language_stats.hpp  language_stats_lib.cpp  language_stats_lib.hpp  language_stats_module.cpp  language_stats_module.hpp  license_detect.cpp  license_detect.hpp  license_module.cpp  license_module.hpp  line_counter_module.cpp  line_counter_module.hpp  metabuild_system.cpp  metabuild_system.hpp  metabuild_system_module.cpp  metabuild_system_module.hpp  statistics_module.hpp  total_lines.cpp  total_lines.hpp
src/: Args_parser.cppm  File_utils.cppm  Git_module.cppm  Language_stats.cppm  Line_count_util.cppm  Line_counter_module.cppm  Output_formatter.cppm  Stats_printer.cppm  Thread_safe_queue.cppm  analyzer_base.cppm  args_parser.cppm  args_parser.hpp  b.cpp  concurrent_queue.cppm  console_formatter.cppm  file_utils.cpp  file_utils.cppm  file_utils.hpp  git_analyzer.cppm  language_analyzer.cppm  language_info.cppm  license_analyzer.cppm  line_count_util.cpp  line_count_util.hpp  line_counter.cpp  line_counter.hpp  lines_analyzer.cppm  lines_count.cppm  main.cpp  metabuild_sys_analyzer.cppm  output_formatter.cpp  output_formatter.hpp  signal_handler.cpp  signal_handler.hpp  stats_printer.cpp  stats_printer.hpp  stats_reporter.cppm  thread_safe_queue.cpp  thread_safe_queue.hpp
